--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "chart.js": "^3.3.2",
     "socket.io-client": "^4.1.2",
     "typescript": "^4.2.4"
   }
