--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^8.0.0",
+    "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.5",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
