--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@types/copy-webpack-plugin": "^8.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.1",
-    "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "chart.js": "^3.3.2",
     "socket.io-client": "^4.1.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack": "^5.54.0"
   }
 }
